# pyx

./: .gitignore  BENCHMARKS.md  Makefile  README.md  build.zig  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: fibonacci_results.md  list_methods_results.md  list_ops_results.md  loop_sum.py  loop_sum_comparison.md  loop_sum_results.md  numpy_style.py  numpy_style_results.md  results.md  run_benchmark.sh  string_concat.py  string_concat_results.md
docs/: ARCHITECTURE.md  COMPILATION_FLOW.md  MONOREPO_STRUCTURE.md
examples/: core_types_demo.py  dict_mixed.py  dict_simple.py  fibonacci.py  for_loop.py  list_append.py  list_pop.py  methods_comprehensive.py  numpy_style.py  pytest_simple.py  string_replace.py  string_simple.py  string_split.py  string_strip.py  string_test.py  web_crawler.py  web_crawler_async.py  while_loop.py
scripts/: install-dev.sh  verify-install.sh
src/: ast.zig  codegen.zig  compiler.zig  main.zig  parser.zig
src/codegen/: builtins.zig  classes.zig  control_flow.zig  expressions.zig  functions.zig  operators.zig  statements.zig
src/codegen/classes/: python_ffi.zig
tests/: test_assert.py  test_class_inheritance.py  test_classes.py  test_dict_items_tuple.py  test_dict_methods.py  test_imports.py  test_list_methods.py  test_list_pop_arithmetic.py  test_regression.py  test_slicing.py  test_string_methods.py  test_tuple.py
