[project]
name = "zyth-workspace"
version = "0.1.0"
description = "Zyth monorepo workspace"
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/runtime",
    "packages/cli",
    "packages/web",
    "packages/http",
    "packages/ai",
    "packages/async",
    "packages/db"
]

[tool.uv.sources]
zyth-core = { workspace = true }
zyth-runtime = { workspace = true }
zyth-cli = { workspace = true }
zyth-web = { workspace = true }
zyth-http = { workspace = true }
zyth-ai = { workspace = true }
zyth-async = { workspace = true }
zyth-db = { workspace = true }
